--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,8 @@
 image: python:2.7
 
 before_script:
-  - pip install pip numpy pytest pytest-cov healpy astropy photutils matplotlib
+  - apt instal python-pip python-numpy python-pytest-cov python-astropy python-matplotlib
+  - pip install healpy photutils 
 
 stages:
   - test
