--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: python:2.7
 
 before_script:
   - apt update
-  - apt install python-pip python-numpy python-pytest-cov python-astropy python-matplotlib
+  - apt install -y python-pip python-numpy python-pytest-cov python-astropy python-matplotlib
   - pip install healpy photutils 
 
 stages:
