--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,7 @@ image: python:2.7
 
 before_script:
   - apt update
-  - apt install -y python-pip python-numpy python-pytest-cov python-astropy python-matplotlib
-  - pip install healpy photutils 
+  - apt install -y python-pip python-numpy python-pytest-cov python-astropy python-matplotlib python-photutils python-healpy
 
 stages:
   - test
