--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,9 @@
 image: python:2.7
 
 before_script:
-  - apt update
-  - apt install -y python-pip python-pytest-cov # python-astropy python-photutils python-healpy
-  - apt build-dep python-matplotlib python-numpy
+  - apt-get update
+  - apt-get install -y python-pip python-pytest-cov # python-astropy python-photutils python-healpy
+  - apt-get build-dep -y python-matplotlib python-numpy
   - pip install numpy astropy healpy photutils matplotlib
   
 stages:
