--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,8 @@ image: python:2.7
 
 before_script:
   - echo -e "\n" >> /etc/apt/sources.list
-  - echo /etc/apt/sources.list | sed 's/deb /deb-src /' >> /etc/apt/sources.list
+  - echo /etc/apt/sources.list | sed 's/deb /deb-src /g' >> /etc/apt/sources.list
+  - cat /etc/apt/sources.list
   - apt-get update
   - apt-get install -y python-pip python-pytest-cov # python-astropy python-photutils python-healpy
   - apt-get build-dep -y python-matplotlib python-numpy
