--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: python:2.7
 
 before_script:
-  - echo -e "\n" >> /etc/apt/sources.list
+  - cat /etc/apt/sources.list
   - echo /etc/apt/sources.list | sed 's/deb /deb-src /g' >> /etc/apt/sources.list
   - cat /etc/apt/sources.list
   - apt-get update
