--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ image: debian:stretch
 before_script:
 #  - cat /etc/apt/sources.list | sed 's/deb /deb-src /g' >> /etc/apt/sources.list
   - apt-get update
-  - apt-get install -y python-pip python-pytest-cov python-astropy python-photutils python-healpy python-matplotlib
+  - apt-get install -y python-pip python-pytest-cov python-astropy python-photutils python-healpy python-matplotlib python-wcsaxes
 #  - apt-get build-dep -y python-numpy
 #  - apt-get build-dep -y matplotlib
 #  - pip install numpy astropy healpy photutils matplotlib
