--- a/setup.cfg
+++ b/setup.cfg
@@ -28,3 +28,6 @@ addopts = --verbose --cov=hpproj --cov-config hpproj/tests/coveragerc
 # E902 - IOError
 select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
 exclude = extern,sphinx,*parsetab.py
+
+[metadata]
+description-file = README.rst
