--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,8 @@ before_script:
 #  - cat /etc/apt/sources.list | sed 's/deb /deb-src /g' >> /etc/apt/sources.list
   - apt-get update
   - apt-get install -y python-pip python-pytest-cov python-coverage
-  - apt-get install -y python-numpy python-matplotlib
+  - apt-get install -y python-numpy
+  - apt-get install -y python-matplotlib
   - apt-get install -y python-astropy python-photutils python-healpy python-wcsaxes
 #  - apt-get build-dep -y python-numpy
 #  - apt-get build-dep -y matplotlib
