--- a/hpproj/data/cutsky.cfg
+++ b/hpproj/data/cutsky.cfg
@@ -12,7 +12,7 @@ doCut = True
 filename = hpproj/data/HFI_SkyMap_100_128_R2.00_RING.fits
 
 [HFI 857]
-filename = hpproj/data/HFI_SkyMap_857_128_R2.00_NEST.fits
+filename = hpproj/data/HFI_SkyMap_857_128_R2.00_NESTED.fits
 doCut = True
 doContour = True
 
