--- a/setup.cfg
+++ b/setup.cfg
@@ -30,4 +30,4 @@ select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
 exclude = extern,sphinx,*parsetab.py
 
 [metadata]
-description-file = README.rst
+description-file = README.md
