Added py2 py3 compatibility

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,6 @@ test=pytest
 minversion = 2.3.3
 addopts = --verbose --cov=hpproj --cov-config hpproj/tests/coveragerc
 # --pep8
-#norecursedirs= .git _build tmp*
 
 [pep8]
 # E101 - mix of tabs and spaces
@@ -31,3 +30,6 @@ exclude = extern,sphinx,*parsetab.py
 
 [metadata]
 description-file = README.rst
+
+[bdist_wheel]
+universal = 1
