doCut implicit to True in config file

--- a/hpproj/data/cutsky.cfg
+++ b/hpproj/data/cutsky.cfg
@@ -6,7 +6,7 @@ png = True
 
 [SMICA]
 filename = hpproj/data/CMB_I_SMICA_128_R2.00.fits
-doCut = True
+doCut = False
 
 [HFI 100]
 filename = hpproj/data/HFI_SkyMap_100_128_R2.00_RING.fits
