--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ test=pytest
 
 [tool:pytest]
 minversion = 2.3.3
-addopts = --verbose --cov=hpproj --cov-config hpproj/tests/coveragerc
+addopts = --verbose --cov=hpproj --cov-config tests/coveragerc
 # --pep8
 
 [pep8]
