tests working again.... but not on the toplevel dir, py3 can not import there

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,9 @@
 [aliases]
 test=pytest
 
-# [nosetests]
-# verbosity=3
-# with-doctest=1
-# with-coverage=1
-# cover-erase=1
-# cover-package=hpproj
-
 [tool:pytest]
 minversion = 2.3.3
-addopts = --verbose --cov=hpproj --cov-config tests/coveragerc
+addopts = --verbose --cov=hpproj --cov-config hpproj/tests/coveragerc
 # --pep8
 
 [pep8]
