--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,8 @@ test=pytest
 minversion = 2.3.3
 addopts = --verbose --cov=hpproj --cov-config hpproj/tests/coveragerc
 # --pep8
+flake8-max-line-length = 99
+flake8-ignore = E402 E501
 
 [pep8]
 # E101 - mix of tabs and spaces
