--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,16 @@ env:
         - NUMPY_VERSION=stable
         - ASTROPY_VERSION=stable
         - SETUP_CMD='test'
-        - PIP_DEPENDENCIES=''
-        - CONDA_DEPENDENCIES='healpy photutils wcsaxes astropy numpy matplotlib pytest-cov'
+        - PIP_DEPENDENCIES='healpy photutils wcsaxes'
+        - CONDA_DEPENDENCIES='astropy numpy matplotlib pytest-cov'
 
 matrix:
     include:
+          # Do a coverage test in Python 2.
+        - python: 2.7
+          env: SETUP_CMD='test --coverage'
+          
+          
         # Try Astropy development version
         - python: 2.7
           env: ASTROPY_VERSION=development
@@ -37,4 +42,5 @@ install:
   - git clone git://github.com/astropy/ci-helpers.git
   - source ci-helpers/travis/setup_conda_$TRAVIS_OS_NAME.sh
 
-script: py.test
+script:
+  - python setup.py $SETUP_CMD
