--- a/.travis.yml
+++ b/.travis.yml
@@ -26,12 +26,16 @@ matrix:
         # Try older numpy versions
         - python: 2.7
           env: NUMPY_VERSION=1.10
+          
         - python: 2.7
           env: NUMPY_VERSION=1.9
+               MATPLOTLIB_VERSION=1.4
         - python: 2.7
           env: NUMPY_VERSION=1.8
+               MATPLOTLIB_VERSION=1.3
         - python: 2.7
           env: NUMPY_VERSION=1.7
+               MATPLOTLIB_VERSION=1.2
 
 install:
   - git clone git://github.com/astropy/ci-helpers.git
