--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ test_master_v2:
   tags:
     - test
   script:
-    - py.test
+    - MPLBACKEND="agg" py.test
 
 test_master_v3:
   stage: test
@@ -41,4 +41,4 @@ test_master_v3:
   tags:
     - test
   script:
-    - py.test-3
+    - MPLBACKEND="agg" py.test-3
