Refactoring ; Move tests directory outside of sources

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ test=pytest
 
 [tool:pytest]
 minversion = 2.3.3
-addopts = --verbose --cov=hpproj --cov-config hpproj/tests/coveragerc
+addopts = --verbose --cov=hpproj --cov-config tests/coveragerc --cov-report=term --cov-report=xml:reports/coverage.xml --junit-xml=reports/tests.xml
 # --pep8
 flake8-max-line-length = 99
 flake8-ignore = E402 E501
