--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,6 +9,10 @@ sonar.projectVersion=1.0
 # If not set, SonarQube starts looking for source code from the directory containing
 # the sonar-project.properties file.
 sonar.sources=hpproj
+sonar.tests=tests
+sonar.language=py
+sonar.python.coverage.reportPath=reports/coverage.xml
+sonar.python.xunit.reportPath=reports/tests.xml
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
