Refactoring for reduced cognitive complexity & correct Dockerfile

--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -7,10 +7,10 @@ RUN apt-get install -y python2.7
 RUN apt-get install -y python-pip python-pytest-cov python-coverage
 RUN apt-get install -y python-numpy python-matplotlib
 RUN apt-get install -y python-astropy python-photutils python-healpy python-wcsaxes
-RUN pip install python-pytest-mpl
+RUN pip install pytest-mpl
 # Basic python v3 packages
 RUN apt-get install -y python3.5
 RUN apt-get install -y python3-pip python3-pytest-cov python3-coverage
 RUN apt-get install -y python3-numpy python3-matplotlib
 RUN apt-get install -y python3-astropy python3-photutils python3-healpy python3-wcsaxes
-RUN pip3 install python-pytest-mpl
+RUN pip3 install pytest-mpl
