New parse module to handle all parsing routine; Refactoring to reduce cyclomatic complexcity; Add gitignore ; CI on all branches ; CodeHealth badge

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,24 +4,17 @@ test=pytest
 [tool:pytest]
 minversion = 2.3.3
 addopts = --verbose --cov=hpproj --cov-config tests/coveragerc --cov-report=term --cov-report=xml:reports/coverage.xml --junit-xml=reports/tests.xml
-# --pep8
-flake8-max-line-length = 99
-flake8-ignore = E402 E501
 
-[pep8]
-# E101 - mix of tabs and spaces
-# W191 - use of tabs
-# W291 - trailing whitespace
-# W292 - no newline at end of file
-# W293 - trailing whitespace
-# W391 - blank line at end of file
-# E111 - 4 spaces per indentation level
-# E112 - 4 spaces per indentation level
-# E113 - 4 spaces per indentation level
-# E901 - SyntaxError or IndentationError
-# E902 - IOError
-select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
-exclude = extern,sphinx,*parsetab.py
+[flake8]
+#flake8-max-line-length = 200
+# E501 line too long
+# E402 module level import not at top of fil
+ignore = E501
+exclude = build,dist,docs,tests
+
+## Run with: pylint --rcfile=setup.cfg hpproj
+[pylint]
+disable=line-too-long,fixme,no-member
 
 [metadata]
 description-file = README.rst
