--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,32 @@
 dist: trusty
 sudo: required
 language: python
-python:
-- 2.7
-- 3.5
-- 3.6
-env:
-  global:
-  - NUMPY_VERSION=stable
-  - ASTROPY_VERSION=stable
-  - SETUP_CMD='test'
-  - PIP_DEPENDENCIES='healpy photutils wcsaxes pytest-mpl'
-  - CONDA_DEPENDENCIES='matplotlib pytest-cov'
 
+python:
+  - 2.7
+  - 3.5
+  - 3.6
+
+env:
+  matrix:
+    - ASTROPY_VERSION=2.0.4
+    - ASTROPY_VERSION=3.0
+    - ASTROPY_VERSION=stable
+    - ASTROPY_VERSION=development
+
+  global:
+    - NUMPY_VERSION=stable
+    - SETUP_CMD='test'
+    - PIP_DEPENDENCIES='healpy photutils wcsaxes pytest-mpl'
+    - CONDA_DEPENDENCIES='matplotlib pytest-cov'
+
+matrix:
+  exclude:
+  - python: 2.7
+    env: ASTROPY_VERSION=3.0
+  - python: 2.7
+    env: ASTROPY_VERSION=development
+    
 addons:
   sonarqube:
     token:
@@ -20,15 +34,11 @@ addons:
   code_climate:
     repo_token: d52f46d19e65a127c5a666bf6a36797132c8246239558162db69f344ba78064f
 
-matrix:
-  include:
-  - python: 3.6
-    env: ASTROPY_VERSION=development
-  - python: 2.7
-    env: NUMPY_VERSION=1.10
+
 install:
-- git clone git://github.com/astropy/ci-helpers.git
-- source ci-helpers/travis/setup_conda_$TRAVIS_OS_NAME.sh
+  - git clone git://github.com/astropy/ci-helpers.git
+  - source ci-helpers/travis/setup_conda_$TRAVIS_OS_NAME.sh
+  
 script:
-- MPLBACKEND="agg" python setup.py $SETUP_CMD
-- sonar-scanner
+  - MPLBACKEND="agg" python setup.py $SETUP_CMD
+  - sonar-scanner
