--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ language: python
 
 python:
   - 2.7
-  - 3.5
   - 3.6
+  - 3.7
 
 env:
   matrix:
@@ -19,7 +19,6 @@ env:
     - SETUP_CMD='test'
     - PIP_DEPENDENCIES='healpy photutils wcsaxes pytest-mpl'
     - CONDA_DEPENDENCIES='matplotlib pytest-cov'
-    - MATPLOTLIB_VERSION=dev
 
 matrix:
   exclude:
@@ -27,6 +26,10 @@ matrix:
     env: ASTROPY_VERSION=3.0
   - python: 2.7
     env: ASTROPY_VERSION=development
+  include:
+  - python: 3.5
+    env: ASTROPY_VERSION=development MATPLOTLIB_VERSION=3.0.5
+   
     
 addons:
   sonarqube:
