--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,8 @@ matrix:
     env: ASTROPY_VERSION=3.0
   - python: 2.7
     env: ASTROPY_VERSION=development
+  - python: 3.7
+    env: ASTROPY_VERSION=2.0.4
   include:
   - python: 3.5
     env: ASTROPY_VERSION=development CONDA_DEPENDENCIES="pytest-cov" MATPLOTLIB_VERSION=3.0.5
